Migrate charm charmhub for stable/ussuri
- start from stable/ussuri branch
- Do charmcraft, osci, zuul changes
- Modify libs to point to stable/ussuri for:
  - charmhelpers
  - charms.openstack (as needed)
  - zaza & zaza.openstack.tests
- Remove unsupported test bundles
- migration bundles to charmhub.io (ch: prefix + channels)
- Build on 18.04 amd64
- Run on 18.04 amd64, s390x, ppc64el, arm64
- Run on 20.04 amd64, s390x, ppc64el, arm64

Change-Id: I049b1c127c55b1f547760b5116e5d285657a19dd

--- a/osci.yaml
+++ b/osci.yaml
@@ -1,24 +1,21 @@
 - project:
     templates:
-      - charm-unit-jobs
+      - charm-unit-jobs-py36
+      - charm-unit-jobs-py38
+      - charm-train-functional-jobs
+      - charm-ussuri-functional-jobs
     check:
       jobs:
-      - bionic-ussuri
-      - focal-ussuri
-      - ganesha-focal-ussuri-non-ha
-      - focal-victoria
-      # Wallaby is currently broken because of a change in the
-      # default token-type requirements in manila's policy.json
-      # that the charm / tests need to learn to handle
-      # - focal-wallaby
-      - groovy-victoria
+        - ganesha-focal-ussuri-non-ha
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
+      build_type: charmcraft
+
 - job:
     name: ganesha-focal-ussuri-non-ha
-    parent: bionic-ussuri
+    parent: focal-ussuri
     dependencies:
-      - bionic-ussuri
+      - focal-ussuri
     vars:
       tox_extra_args: focal-ussuri-non-ha
