--- a/src/tests/bundles/bionic-train.yaml
+++ b/src/tests/bundles/bionic-train.yaml
@@ -1,3 +1,5 @@
+local_overlay_enabled: False
+
 series: bionic
 options:
   source: &source cloud:bionic-train
@@ -5,53 +7,53 @@ services:
   manila-ganesha-az1:
     num_units: 3
     series: bionic
-    charm: ../../../manila-ganesha
+    charm: ../../../manila-ganesha.charm
     options:
       openstack-origin: *source
   ceph-mon:
-    charm: cs:~openstack-charmers/ceph-mon
+    charm: ch:ceph-mon
     num_units: 3
     options:
       source: *source
-    channel: candidate
+    channel: octopus/edge
   ceph-osd:
-    charm: cs:~openstack-charmers/ceph-osd
+    charm: ch:ceph-osd
     num_units: 3
     options:
       source: *source
     storage:
       osd-devices: 'cinder,10G'
-    channel: candidate
+    channel: octopus/edge
   ceph-fs:
-    charm: cs:~openstack-charmers/ceph-fs
+    charm: ch:ceph-fs
     num_units: 2
     options:
       source: *source
-    channel: candidate
+    channel: octopus/edge
   manila:
     # charm: cs:~openstack-charmers/manila
-    charm: cs:~openstack-charmers/manila
+    charm: ch:manila
     num_units: 1
     options:
       openstack-origin: *source
       default-share-backend: cephfsnfs1
       share-protocols: NFS
-    channel: candidate
+    channel: ussuri/edge
   nova-cloud-controller:
-    charm: cs:~openstack-charmers/nova-cloud-controller
+    charm: ch:nova-cloud-controller
     num_units: 1
     options:
       network-manager: Neutron
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
   placement:
-    charm: cs:~openstack-charmers/placement
+    charm: ch:placement
     num_units: 1
     options:
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
   nova-compute:
-    charm: cs:~openstack-charmers/nova-compute
+    charm: ch:nova-compute
     num_units: 2
     constraints: mem=8G
     options:
@@ -60,49 +62,49 @@ services:
       enable-resize: true
       migration-auth-type: ssh
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
   glance:
-    charm: cs:~openstack-charmers/glance
+    charm: ch:glance
     num_units: 1
     options:
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
   neutron-api:
-    charm: cs:~openstack-charmers/neutron-api
+    charm: ch:neutron-api
     num_units: 1
     options:
       flat-network-providers: physnet1
       neutron-security-groups: true
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
   neutron-openvswitch:
-    charm: cs:~openstack-charmers/neutron-openvswitch
-    channel: candidate
+    charm: ch:neutron-openvswitch
+    channel: ussuri/edge
   neutron-gateway:
-    charm: cs:~openstack-charmers/neutron-gateway
+    charm: ch:neutron-gateway
     num_units: 1
     options:
       bridge-mappings: physnet1:br-ex
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
   rabbitmq-server:
-    charm: cs:~openstack-charmers/rabbitmq-server
+    charm: ch:rabbitmq-server
     num_units: 1
     options:
       source: *source
-    channel: candidate
+    channel: 3.8/edge
   percona-cluster:
-    charm: cs:~openstack-charmers/percona-cluster
+    charm: ch:percona-cluster
     num_units: 1
     options:
       source: *source
-    channel: candidate
+    channel: 5.7/edge
   keystone:
-    charm: cs:~openstack-charmers/keystone
+    charm: ch:keystone
     num_units: 1
     options:
       openstack-origin: *source
-    channel: candidate
+    channel: ussuri/edge
 
 relations:
   - - ceph-mon
