--- a/src/tests/bundles/jammy-zed.yaml
+++ b/src/tests/bundles/jammy-zed.yaml
@@ -1,9 +1,9 @@
 variables:
-  openstack-origin: &openstack-origin distro
+  openstack-origin: &openstack-origin cloud:jammy-zed
 
 local_overlay_enabled: True
 
-series: impish
+series: jammy
 
 comment:
 - 'machines section to decide order of deployment. database sooner = faster'
@@ -92,7 +92,7 @@ services:
       - '6'
       - '7'
       - '8'
-    channel: quincy/edge
+    channel: latest/edge
 
   ceph-osd:
     charm: ch:ceph-osd
@@ -105,7 +105,7 @@ services:
       - '9'
       - '10'
       - '11'
-    channel: quincy/edge
+    channel: latest/edge
 
   ceph-fs:
     charm: ch:ceph-fs
@@ -115,7 +115,7 @@ services:
     to:
       - '12'
       - '13'
-    channel: quincy/edge
+    channel: latest/edge
 
   manila:
     charm: ch:manila
@@ -126,7 +126,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '14'
-    channel: yoga/edge
+    channel: latest/edge
 
   nova-cloud-controller:
     charm: ch:nova-cloud-controller
@@ -136,7 +136,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '15'
-    channel: yoga/edge
+    channel: latest/edge
 
   placement:
     charm: ch:placement
@@ -145,7 +145,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '16'
-    channel: yoga/edge
+    channel: latest/edge
 
   nova-compute:
     charm: ch:nova-compute
@@ -159,7 +159,7 @@ services:
     to:
       - '17'
       - '18'
-    channel: yoga/edge
+    channel: latest/edge
 
   glance:
     charm: ch:glance
@@ -168,7 +168,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '19'
-    channel: yoga/edge
+    channel: latest/edge
 
   neutron-api:
     charm: ch:neutron-api
@@ -181,11 +181,11 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '20'
-    channel: yoga/edge
+    channel: latest/edge
 
   neutron-openvswitch:
     charm: ch:neutron-openvswitch
-    channel: yoga/edge
+    channel: latest/edge
 
   neutron-gateway:
     charm: ch:neutron-gateway
@@ -195,7 +195,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '21'
-    channel: yoga/edge
+    channel: latest/edge
 
   rabbitmq-server:
     charm: ch:rabbitmq-server
@@ -213,10 +213,11 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '23'
-    channel: yoga/edge
+    channel: latest/edge
 
   nrpe:
     charm: ch:nrpe
+    channel: latest/edge
 
 relations:
 
