--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -1,15 +1,15 @@
 charm_name: manila-ganesha
 
 gate_bundles:
-- focal-xena
-- impish-xena
-
-dev_bundles:
-- focal-yoga
 - jammy-yoga
 
+dev_bundles:
+- jammy-yoga
+- jammy-zed
+- kinetic-zed
+
 smoke_bundles:
-- focal-xena
+- jammy-yoga
 
 target_deploy_status: {}
 
@@ -26,5 +26,4 @@ configure:
 
 tests_options:
   force_deploy:
-    - impish-xena
-    - jammy-yoga
+    - kinetic-zed
