Added NRPE checks for manila-ganesha charm.
- added 3 basic checks to check: nfs connection, nfs services, and nfs shares
- updated test bundles to include nrpe and nrpe-external-master for
  functional tests.

func-test-pr: https://github.com/openstack-charmers/zaza-openstack-tests/pull/806

Closes-bug: #1925975
Change-Id: I4d3736300f75b9811f4f6525b5454c7e495ef566

--- a/src/layer.yaml
+++ b/src/layer.yaml
@@ -6,6 +6,7 @@ includes:
   - interface:rabbitmq
   - interface:keystone-credentials
   - interface:manila-plugin
+  - interface:nrpe-external-master
 options:
   basic:
     use_venv: True
