Build separately for each supported series and use binary builds
Charms for OpenStack Yoga supports both Ubuntu Focal and Jammy
which means Python 3.8 and Python 3.10.  Managing dependencies
across those two versions is non-trivial and we need to build
the charm on the series the charm is supposed to support.

Switch to using a binary build which allows pip's dependency
resolution to work.

Change-Id: I3aeccbc4cc2479e12c83daa62eb3a5f254c3a3ce

--- a/src/tests/bundles/jammy-yoga.yaml
+++ b/src/tests/bundles/jammy-yoga.yaml
@@ -75,7 +75,7 @@ services:
 
   manila-ganesha-az1:
     num_units: 3
-    charm: ../../../manila-ganesha.charm
+    charm: ../../../manila-ganesha_ubuntu-22.04-amd64_ubuntu-22.10-amd64.charm
     options:
       openstack-origin: *openstack-origin
     to:
