Ensure build continues if src directory exists
This change also aligns the entry point with openstack charms.
For example:
https://review.opendev.org/c/openstack/charm-cinder-lvm/+/859408

Change-Id: I945fecab2f5dbfdc6f9b5b7d5edc2644c7ef512f

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -22,8 +22,9 @@ parts:
       # hooks directory.
       cp -r $CRAFT_STAGE/* .
       # Charmcraft looks for this specific entry point.
-      mkdir src
-      ln -sf ../hooks/start src/charm.py
+      mkdir -p src
+      touch src/charm.py
+      chmod +x src/charm.py
 
 bases:
   - build-on:
