Pin tox to < 4.0.0
Tox 4.0.0 was recently released and it has several breaking changes.
We pin to < 4.0.0 here. We are planning to move forward only on the
master charm branches.

Tox is also pinned to < 4.0.0 for stable branches in upstream
openstack-zuul-jobs as well as in zosci-config. However, the
requires= section in the charm's tox.ini file ends up installing
tox>4, wiping out the zuul-pinned tox<4 that was already installed
installed. This patch fixes that.

Change-Id: I193d12f4dcda538612078d6a3187c8ca929c6bed

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ skipsdist = True
 envlist = pep8,py3
 # NOTE: Avoid build/test env pollution by not enabling sitepackages.
 sitepackages = False
+requires =
+  tox < 4.0.0
 
 # NOTE: https://wiki.canonical.com/engineering/OpenStack/InstallLatestToxOnOsci
 minversion = 3.18.0
