--- a/src/tests/bundles/lunar-antelope.yaml
+++ b/src/tests/bundles/lunar-antelope.yaml
@@ -42,36 +42,36 @@ services:
 
   manila-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   manila-ganesha-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   keystone-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   neutron-api-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   nova-cloud-controller-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   glance-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   placement-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
 
   mysql-innodb-cluster:
     charm: ch:mysql-innodb-cluster
     num_units: 3
     options:
-      source: *openstack-origin
+      source: distro
     to:
       - '0'
       - '1'
       - '2'
-    channel: latest/edge
+    channel: 8.0/edge
 
   manila-ganesha-az1:
     num_units: 3
@@ -92,7 +92,7 @@ services:
       - '6'
       - '7'
       - '8'
-    channel: latest/edge
+    channel: quincy/edge
 
   ceph-osd:
     charm: ch:ceph-osd
@@ -105,7 +105,7 @@ services:
       - '9'
       - '10'
       - '11'
-    channel: latest/edge
+    channel: quincy/edge
 
   ceph-fs:
     charm: ch:ceph-fs
@@ -115,7 +115,7 @@ services:
     to:
       - '12'
       - '13'
-    channel: latest/edge
+    channel: quincy/edge
 
   manila:
     charm: ch:manila
@@ -126,7 +126,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '14'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   nova-cloud-controller:
     charm: ch:nova-cloud-controller
@@ -136,7 +136,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '15'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   placement:
     charm: ch:placement
@@ -145,7 +145,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '16'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   nova-compute:
     charm: ch:nova-compute
@@ -159,7 +159,7 @@ services:
     to:
       - '17'
       - '18'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   glance:
     charm: ch:glance
@@ -168,7 +168,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '19'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   neutron-api:
     charm: ch:neutron-api
@@ -181,11 +181,11 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '20'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   neutron-openvswitch:
     charm: ch:neutron-openvswitch
-    channel: latest/edge
+    channel: 2023.1/edge
 
   neutron-gateway:
     charm: ch:neutron-gateway
@@ -195,14 +195,14 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '21'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   rabbitmq-server:
     charm: ch:rabbitmq-server
     num_units: 1
     to:
       - '22'
-    channel: latest/edge
+    channel: 3.9/edge
 
   keystone:
     charm: ch:keystone
@@ -211,7 +211,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '23'
-    channel: latest/edge
+    channel: 2023.1/edge
 
   nrpe:
     charm: ch:nrpe
