Add 2023.2 Bobcat support
* sync charm-helpers to classic charms
* change openstack-origin/source default to bobcat
* add mantic to metadata series
* align testing with bobcat
* add new bobcat bundles
* add bobcat bundles to tests.yaml
* add bobcat tests to osci.yaml
* update build-on and run-on bases
* drop kinetic
* update charmcraft_channel to 2.x/edge

Related-Bug: #2031414
Change-Id: I35b24092816453deac372c06d27e7cfa20f27a9e

--- a/src/tests/bundles/mantic-bobcat.yaml
+++ b/src/tests/bundles/mantic-bobcat.yaml
@@ -3,7 +3,7 @@ variables:
 
 local_overlay_enabled: True
 
-series: lunar
+series: mantic
 
 comment:
 - 'machines section to decide order of deployment. database sooner = faster'
@@ -75,7 +75,7 @@ services:
 
   manila-ganesha-az1:
     num_units: 3
-    charm: ../../../manila-ganesha_ubuntu-23.04-amd64.charm
+    charm: ../../../manila-ganesha_ubuntu-23.10-amd64.charm
     options:
       openstack-origin: *openstack-origin
     to:
