--- a/src/tests/bundles/jammy-bobcat.yaml
+++ b/src/tests/bundles/jammy-bobcat.yaml
@@ -1,5 +1,5 @@
 variables:
-  openstack-origin: &openstack-origin cloud:jammy-zed
+  openstack-origin: &openstack-origin cloud:jammy-bobcat
 
 local_overlay_enabled: True
 
@@ -75,7 +75,7 @@ services:
 
   manila-ganesha-az1:
     num_units: 3
-    charm: ../../../manila-ganesha_ubuntu-22.04-amd64_ubuntu-22.10-amd64_ubuntu-23.04-amd64.charm
+    charm: ../../../manila-ganesha_ubuntu-22.04-amd64.charm
     options:
       openstack-origin: *openstack-origin
     to:
