Don't expose no-op options for OpenStack API service
Manila-ganesha inherits layer:openstack-api on purpose to configure the
manila-share and related services, but the units won't have OpenStack
API endpoints by nature. We already have some config options excluded in
layers.yaml but we should extend the list to exclude more no-op options
related to OpenStack APIs so we can avoid confusing operators.

Closes-Bug: #2032869
Change-Id: Ic6dc3887bc3ca31e32acf81f7a0b6e6e3e73ba1c

--- a/src/layer.yaml
+++ b/src/layer.yaml
@@ -18,3 +18,14 @@ config:
     - ssl_cert
     - ssl_key
     - verbose
+    - haproxy-server-timeout
+    - haproxy-client-timeout
+    - haproxy-queue-timeout
+    - haproxy-connect-timeout
+    - dns-ha
+    - os-admin-hostname
+    - os-admin-network
+    - os-internal-hostname
+    - os-internal-network
+    - os-public-hostname
+    - os-public-network
