--- a/osci.yaml
+++ b/osci.yaml
@@ -1,15 +1,8 @@
 - project:
     templates:
       - charm-unit-jobs-py38
-      #- charm-victoria-functional-jobs
+      - charm-victoria-functional-jobs
       - charm-wallaby-functional-jobs
-    check:
-      jobs:
-        # Victoria is currently broken for the stable/wallaby charm
-        # make the test non-voting so that patches can still be landed against
-        # stable/wallaby
-        - focal-victoria:
-            voting: false
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
