Add config option to override hardcoded service username
'manila' username is hardcoded and cannot be overridden. At
the moment the main purpose of this is to allow operator to
configure an username that can match manila charm's service
credential, which may be "manila", "manila_manilav2" or
"<prefix>-manila".

Related-bug: #2043588
Change-Id: I7bcdcd361b633481bd401209a1df614132d34139
(cherry picked from commit ed1b52eaf18e9ff1199a11b60b8dc82dbc88301d)
(cherry picked from commit 537992c8b0a8e58f215f3ea6c0997ade2d68aeac)

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -30,6 +30,10 @@ options:
     description: |
       A comma-separated list of nagios servicegroups. If left empty, the
       nagios_context will be used as the servicegroup.
+  service-user:
+    default: manila
+    type: string
+    description: Username used for keystone's service credential.
   rabbit-user:
     default: manila
     type: string
