Add config option to override hardcoded service username
'manila' username is hardcoded and cannot be overridden. At
the moment the main purpose of this is to allow operator to
configure an username that can match manila charm's service
credential, which may be "manila", "manila_manilav2" or
"<prefix>-manila".

Related-bug: #2043588
Change-Id: I7bcdcd361b633481bd401209a1df614132d34139
(cherry picked from commit ed1b52eaf18e9ff1199a11b60b8dc82dbc88301d)
(cherry picked from commit 537992c8b0a8e58f215f3ea6c0997ade2d68aeac)
(cherry picked from commit 35aa4668252ce584b991cafbf0a35a9f4901167b)
(cherry picked from commit 46be288e3da56eb814d61d5795cf9d3bee843f1b)

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -14,6 +14,10 @@ options:
       Note that updating this setting to a source that is known to
       provide a later version of OpenStack will trigger a software
       upgrade.
+  service-user:
+    default: manila
+    type: string
+    description: Username used for keystone's service credential.
   rabbit-user:
     default: manila
     type: string
