Updates for caracal testing support
These updates, on the master branch, are to support testing the caracal
packages and support of the charms for caracal.  They do NOT lock the charms
down, and don't change the testing branches to stable branches.

Change-Id: I93f3ff2e704073a47c4dc50603fd4ba6be01dc18

--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -1,16 +1,13 @@
 charm_name: manila-ganesha
 
 gate_bundles:
-- jammy-antelope
-
+  - jammy-antelope
+  - jammy-bobcat
+  - jammy-caracal
 dev_bundles:
-- jammy-bobcat
-- lunar-antelope
-- mantic-bobcat
-
+  - noble-caracal
 smoke_bundles:
-- jammy-yoga
-
+  - jammy-caracal
 target_deploy_status: {}
 
 tests:
@@ -26,5 +23,4 @@ configure:
 
 tests_options:
   force_deploy:
-    - lunar-antelope
-    - mantic-bobcat
+    - noble-caracal
