--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ setuptools<50.0.0  # https://github.com/pypa/setuptools/commit/04e3df22df840c6bb
 # Build requirements
 pyparsing<3.0.0  # cffi needs pyparsing < 3.0.0.
 cffi==1.14.6; python_version < '3.6'  # cffi 1.15.0 drops support for py35.
-charm-tools==2.8.3
+charm-tools
+protobuf<3.20; python_version <= '3.6' #protobuf 3.20.1  drops support for py36.
 
 simplejson
 
