--- a/tox.ini
+++ b/tox.ini
@@ -97,7 +97,10 @@ commands = stestr run --slowest {posargs}
 [testenv:pep8]
 basepython = python3
 deps = flake8==3.9.2
-       charm-tools==2.8.3
+       charm-tools==2.8.6
+       PyYAML==6.0.1
+       protobuf==3.19.6
+       cffi==1.15.1
 commands = flake8 {posargs} src unit_tests
 
 [testenv:func-target]
