--- a/src/tests/bundles/jammy-caracal.yaml
+++ b/src/tests/bundles/jammy-caracal.yaml
@@ -92,7 +92,7 @@ services:
       - '6'
       - '7'
       - '8'
-    channel: reef/edge
+    channel: squid/edge
 
   ceph-osd:
     charm: ch:ceph-osd
@@ -105,7 +105,7 @@ services:
       - '9'
       - '10'
       - '11'
-    channel: reef/edge
+    channel: squid/edge
 
   ceph-fs:
     charm: ch:ceph-fs
@@ -115,7 +115,7 @@ services:
     to:
       - '12'
       - '13'
-    channel: reef/edge
+    channel: squid/edge
 
   manila:
     charm: ch:manila
