Use client cert for keystone-identity
When manila-ganesha is related to vault it needs a client cert to
configure the keystone-auth section of manila.conf to communicate with
keystone. This patch sets that up and removes the broken server cert
auto configuration which ended up masking the manila-share service.

func-test-pr: https://github.com/openstack-charmers/zaza-openstack-tests/pull/1250
Change-Id: I55e9aa09b88684517d4052dc56eed0cab05a0262
Closes-Bug: #2064487
(cherry picked from commit ddba2d84315eb147d8f5be623878f3ee6bf98176)
(cherry picked from commit 47be19b260f2434debf57779e5f9110be4afcee1)

--- a/osci.yaml
+++ b/osci.yaml
@@ -2,8 +2,17 @@
     templates:
       - charm-unit-jobs-py310
       - charm-functional-jobs
+    check:
+      jobs:
+        - jammy-antelope-vault_manila-ganesha
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
       build_type: charmcraft
       charmcraft_channel: 2.1/stable
+
+- job:
+    name: jammy-antelope-vault_manila-ganesha
+    parent: func-target
+    vars:
+      tox_extra_args: '-- vault:jammy-antelope-vault'
