--- a/src/templates/rocky/manila.conf
+++ b/src/templates/rocky/manila.conf
@@ -29,6 +29,20 @@ lock_path = /var/lib/manila/tmp
 # parts/section-keystone-authtoken includes the [keystone_authtoken] section
 # identifier
 {% include "parts/section-keystone-authtoken" %}
+{% if certificates -%}
+# Certificates for https connections to keystone when tls-certificates is
+# available
+{# NOTE(ajkavanagh) 'certificates' is an optional relation and so we have to -#}
+{# check for its existence before access the .parts. -#}
+{% if certificates.certfile -%}
+certfile = {{ certificates.certfile }}
+keyfile = {{ certificates.keyfile }}
+{% endif -%}
+{% if certificates.cafile -%}
+cafile = {{ certificates.cafile }}
+insecure = false
+{% endif -%}
+{% endif %}
 
 [oslo_messaging_amqp]
 
