--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -10,10 +10,15 @@ dev_bundles:
 smoke_bundles:
 - jammy-yoga
 
-target_deploy_status: {}
+target_deploy_status:
+  vault:
+    workload-status: blocked
+    workload-status-message-prefix: Vault needs to be initialized
 
 tests:
   - zaza.openstack.charm_tests.manila_ganesha.tests.ManilaGaneshaTests
+  - vault:
+    - zaza.openstack.charm_tests.manila_ganesha.tests.ManilaGaneshaTests
 
 configure:
   - zaza.openstack.charm_tests.glance.setup.add_lts_image
@@ -22,6 +27,14 @@ configure:
   - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
   - zaza.openstack.charm_tests.manila_ganesha.setup.setup_ganesha_share_type
+  - vault:
+    - zaza.openstack.charm_tests.vault.setup.auto_initialize
+    - zaza.openstack.charm_tests.glance.setup.add_lts_image
+    - zaza.openstack.charm_tests.neutron.setup.basic_overcloud_network
+    - zaza.openstack.charm_tests.nova.setup.create_flavors
+    - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
+    - zaza.openstack.charm_tests.keystone.setup.add_demo_user
+    - zaza.openstack.charm_tests.manila_ganesha.setup.setup_ganesha_share_type
 
 tests_options:
   force_deploy:
