--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ commands = stestr run --slowest {posargs}
 basepython = python3
 deps = flake8==3.9.2
        PyYAML==6.0.1
-       git+https://github.com/juju/charm-tools.git
+       charm-tools
 commands = flake8 {posargs} src unit_tests
 
 [testenv:func-target]
