--- a/osci.yaml
+++ b/osci.yaml
@@ -2,8 +2,17 @@
     templates:
       - charm-unit-jobs-py310
       - charm-functional-jobs
+    check:
+      jobs:
+        - noble-caracal-vault_manila-ganesha
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
       build_type: charmcraft
       charmcraft_channel: 3.x/stable
+
+- job:
+    name: noble-caracal-vault_manila-ganesha
+    parent: func-target
+    vars:
+      tox_extra_args: '-- vault:noble-caracal-vault'
