Set Only_Numeric_Owners = true in nfs-ganesha
Without this a service restart sets share permissions
back to nobody:nogroup.

Closes-Bug: #2119634
Change-Id: I3af58cf8499f21dac7dbb2ecb8d0efab87ad5f7b
Signed-off-by: Edward Hope-Morley <edward.hope-morley@canonical.com>
(cherry picked from commit 43cad9f4b9e849958e7396490f95ed1845f79da2)

--- a/src/templates/rocky/ganesha.conf
+++ b/src/templates/rocky/ganesha.conf
@@ -55,6 +55,10 @@ NFSv4
     # NFSv4.0 clients do not send a RECLAIM_COMPLETE, so we end up having
     # to wait out the entire grace period if there are any. Avoid them.
     Minor_Versions =  1,2;
+
+    # With this set to true, Ganesha will send owner and group_owner as numeric
+    # strings (defaults to false).
+    Only_Numeric_Owners = true;
 }
 
 # The libcephfs client will aggressively cache information while it
